# polygon-pos-light

./: .gitignore  README.md
checkpoint/: Cargo.toml
checkpoint/src/: hasher.rs  header.rs  lib.rs
invariant/: Cargo.toml
invariant/src/: balance.rs  balance.rs.x  hasher.rs  invariant.rs  ledger.rs  lib.rs  proof.rs
milestone/: Cargo.toml  NOTES.md
milestone/src/: checkpoint.rs  eth.rs  hasher.rs  invariant.js.x  lib.rs  msg.rs  proof.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
