[package]
name = "poly_milestone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum = { version = "0.15.0", default-features = false, features = ["with-serde"] }
hex = "0.4.3"
rlp = { version = "0.5.2", default-features = false, features = ["derive"] }
rs_merkle = { version = "1.4", default-features = false }
sha3 = "0.10.8"
