[package]
name = "poly_milestone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rs_merkle = { version = "1.4", default-features = false }
sha3 = "0.10.8"
reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
alloy-rlp = { version = "0.3", default-features = false }
k256 = "0.13.3"